fix: mobile overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
 }
 
 body {
+  overflow-y: hidden !important;
+  position: relative;
   background: #252525;
   background: linear-gradient(15deg, #101010 0%, #252525 100%);
 }
